fix:button align

--- a/src/components/Hero/styles.scss
+++ b/src/components/Hero/styles.scss
@@ -79,6 +79,7 @@
         position: absolute;
         right: 0;
         bottom: 0;
+        opacity: 40%;
         // height: 140%;
         width: 25%;
         overflow: hidden;
