--- a/src/components/PrimaryButton/styles.scss
+++ b/src/components/PrimaryButton/styles.scss
@@ -7,7 +7,7 @@
     background-position: 0% 50%;
     transition: background-position 0.5s ease;
     color: $light-color;
-    padding: 0.5rem 1.5rem;
+    // padding: .5rem 1.5rem;
     font-weight: 600;
     font-size: clamp(1.5rem, 3vw, 2rem);
     &:hover {
